@@ -66,6 +66,13 @@ void RenderButton::removeChild(RenderObject* oldChild)
 
 void RenderButton::setStyle(RenderStyle* style)
 {
+    if (m_inner) {
+        // RenderBlock::setStyle is going to apply a new style to the inner block, which
+        // will have the initial box flex value, 0. The current value is 1, because we set
+        // it right below. Here we change it back to 0 to avoid getting a spurious layout hint
+        // because of the difference.
+        m_inner->style()->setBoxFlex(0);
+    }
     RenderBlock::setStyle(style);
     if (m_buttonText)
         m_buttonText->setStyle(style);
